# portfolio

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  uptime.yml
crates/mini-shell/: .gitignore  Cargo.toml
crates/mini-shell/src/: lib.rs
public/: robots.txt  sitemap.xml
scripts/: fetch-github.mjs
src/: App.svelte  app.css
src/lib/: time.ts
src/lib/components/: About.svelte  AnimatedBackdrop.svelte  CommandPalette.svelte  Footer.svelte  GitHubStats.svelte  Hero.svelte  Nav.svelte  ProjectCard.svelte  ProjectDetail.svelte  Projects.svelte  Terminal.svelte
src/lib/components/icons/: GithubIcon.svelte  LinkedinIcon.svelte
src/lib/data/: github.generated.ts  projects.ts
src/lib/terminal/: commands.ts
src/lib/wasm/: shell.ts
