[package]
name = "mini-shell"
version = "0.1.0"
edition = "2021"
description = "Tiny pipeline shell language compiled to WASM for the portfolio terminal"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

